--- a/DoubleInput/Components/Layout/NavMenu.razor
+++ b/DoubleInput/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">InputFields</a>
+        <a class="navbar-brand" href="">DoubleInput</a>
     </div>
 </div>
 
@@ -14,14 +14,7 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Two" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Two inputs
-            </NavLink>
-        </div>
-
-
+       
     </nav>
 </div>
 
